--- a/deploy.cfg
+++ b/deploy.cfg
@@ -1,25 +1,21 @@
 [fba_tools]
-kbase-endpoint = {{ kbase_endpoint }}
-job-service-url = {{ job_service_url }}
-workspace-url = {{ workspace_url }}
-shock-url = {{ shock_url }}
-{% if handle_url %}
-handle-service-url = {{ handle_url }}
-{% else %}
-handle-service-url = {{ kbase_endpoint }}/handle_service
-{% endif %}
-{% if srv_wiz_url %}
-service-wizard = {{ srv_wiz_url }}
-{% else %}
-service-wizard = {{ kbase_endpoint }}/service_wizard
-{% endif %}
-njsw-url = {{ njsw_url }}
-{% if auth_service_url %}
-auth-service-url = {{ auth_service_url }}
-{% endif %}
-{% if auth_service_url_allow_insecure %}
-auth-service-url-allow-insecure = {{ auth_service_url_allow_insecure }}
-{% endif %}
+kbase-endpoint = https://appdev.kbase.us/services
+job-service-url = https://appdev.kbase.us/services/userandjobstate
+workspace-url = https://appdev.kbase.us/services/ws
+shock-url = https://appdev.kbase.us/services/shock-api
+
+handle-service-url = https://appdev.kbase.us/services/handle_service
+
+
+service-wizard = https://appdev.kbase.us/services/service_wizard
+
+njsw-url = https://appdev.kbase.us/services/njs_wrapper
+
+auth-service-url = https://appdev.kbase.us/services/auth/api/legacy/KBase/Sessions/Login
+
+
+auth-service-url-allow-insecure = false
+
 scratch = /kb/module/work/tmp
 data_sources=cdm
 load_data_option=preload
@@ -56,27 +52,23 @@ ontology_map_list=KEGGKO:KEGG_KO.ModelSEED;EC:EBI_EC.ModelSEED;MetaCyc:Metacyc_R
 ontology_map_workspace=KBaseOntology
 
 [UtilConfig]
-kbase-endpoint = {{ kbase_endpoint }}
-job-service-url = {{ job_service_url }}
-workspace-url = {{ workspace_url }}
-shock-url = {{ shock_url }}
-{% if handle_url %}
-handle-service-url = {{ handle_url }}
-{% else %}
-handle-service-url = {{ kbase_endpoint }}/handle_service
-{% endif %}
-{% if srv_wiz_url %}
-service-wizard = {{ srv_wiz_url }}
-{% else %}
-service-wizard = {{ kbase_endpoint }}/service_wizard
-{% endif %}
-njsw-url = {{ njsw_url }}
-{% if auth_service_url %}
-auth-service-url = {{ auth_service_url }}
-{% endif %}
-{% if auth_service_url_allow_insecure %}
-auth-service-url-allow-insecure = {{ auth_service_url_allow_insecure }}
-{% endif %}
+kbase-endpoint = https://appdev.kbase.us/services
+job-service-url = https://appdev.kbase.us/services/userandjobstate
+workspace-url = https://appdev.kbase.us/services/ws
+shock-url = https://appdev.kbase.us/services/shock-api
+
+handle-service-url = https://appdev.kbase.us/services/handle_service
+
+
+service-wizard = https://appdev.kbase.us/services/service_wizard
+
+njsw-url = https://appdev.kbase.us/services/njs_wrapper
+
+auth-service-url = https://appdev.kbase.us/services/auth/api/legacy/KBase/Sessions/Login
+
+
+auth-service-url-allow-insecure = false
+
 scratch = /kb/module/work/tmp
 reportimpl = 0
 fulltrace = 1
