new branch with debugging and dumping statements for troubleshooting purposes

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: perl
 perl:
-- 5.16.3
+- 5.18.2
 sudo: required
 services:
 - docker
 before_install:
 - cpanm -n Devel::Cover::Report::Coveralls
 install:
+- cpanm --installdeps .
 - docker pull kbase/kb-sdk
 - docker run kbase/kb-sdk genscript > $HOME/bin/kb-sdk
 - chmod 755 $HOME/bin/kb-sdk
