--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -8,12 +8,12 @@ on:
 
 jobs:
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ialarmedalien/fba_tools:$(date +%s)
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Build the Docker image
+#      run: docker build . --file Dockerfile --tag ialarmedalien/fba_tools:$(date +%s)
 
   install_kbsdk_and_test:
     runs-on: ubuntu-latest
@@ -24,6 +24,6 @@ jobs:
         PATH: ${{ env.PATH }}:./bin/kb-sdk
         KBASE_TEST_TOKEN: ${{ secrets.KBASE_TEST_TOKEN }}
       run: |
-        chmod +x scripts/kb_sdk_prep.sh
+        chmod +x ./scripts/kb_sdk_prep.sh
         ./scripts/kb_sdk_prep.sh
         kb-sdk test
