--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -27,6 +27,5 @@ jobs:
         KBASE_TEST_TOKEN: ${{ secrets.KBASE_TEST_TOKEN }}
       shell: bash
       run: |
-        chmod +x ./scripts/kb_sdk_prep.sh
-        ./scripts/kb_sdk_prep.sh
+        sh ./scripts/kb_sdk_prep.sh
         kb-sdk test
