--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -31,15 +31,12 @@ jobs:
     
     - name: change permissions
       shell: bash
-      env:
-        PATH: ${{ env.PATH }}:./bin/
       run: |
         chmod 755 ./bin/kb-sdk
-        kb-sdk version
+        ./bin/kb-sdk version
       
     - name: run kb-sdk test
       shell: bash
       env:
-        PATH: ${{ env.PATH }}:./bin/
         KBASE_TEST_TOKEN: ${{ secrets.KBASE_TEST_TOKEN }}
-      run: kb-sdk test
+      run: ./bin/kb-sdk test
