--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -25,8 +25,11 @@ jobs:
       shell: bash
       run: |
         docker pull kbase/kb-sdk
+        echo "running genscript"
         docker run kbase/kb-sdk genscript > ./bin/kb-sdk
+        echo "changing permissions"
         chmod 755 ./bin/kb-sdk
+        echo "checking version"
         ./bin/kb-sdk version
     
     - name: change permissions
