--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -8,38 +8,11 @@ on:
 
 jobs:
 
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Build the Docker image
-#      run: docker build . --file Dockerfile --tag ialarmedalien/fba_tools:$(date +%s)
-
-  install_kbsdk_and_test:
-    runs-on: ubuntu-latest
-    steps:
-    - name: checkout git repo
-      uses: actions/checkout@v2
-        
-    - name: pull and run docker image
-      shell: bash
-      run: |
-        docker pull kbase/kb-sdk
-        echo "running genscript"
-        docker run kbase/kb-sdk genscript > ./bin/kb-sdk
-        echo "changing permissions"
-        chmod 755 ./bin/kb-sdk
-        echo "checking version"
-        ./bin/kb-sdk version
-    
-    - name: change permissions
-      shell: bash
-      run: |
-        chmod 755 ./bin/kb-sdk
-        ./bin/kb-sdk version
-      
-    - name: run kb-sdk test
-      shell: bash
-      env:
-        KBASE_TEST_TOKEN: ${{ secrets.KBASE_TEST_TOKEN }}
-      run: ./bin/kb-sdk test
+ build_test_local:
+   runs-on: ubuntu-latest
+   steps:
+   - uses: actions/checkout@v2
+   - name: Build the Docker image
+     run: docker build . --file Dockerfile --tag test/fba_tools:latest
+   - name: Run tests
+     run: docker run test/fba_tools:latest test
