--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -17,8 +17,8 @@ jobs:
     - name: pull and run docker image
       shell: bash
       run: |
-        docker pull ialarmedalien/kb-sdk:report_args
-        docker run ialarmedalien/kb-sdk:report_args genscript > ./bin/kb-sdk
+        docker pull ialarmedalien/kb-sdk
+        docker run ialarmedalien/kb-sdk genscript > ./bin/kb-sdk
         chmod 755 ./bin/kb-sdk
         ./bin/kb-sdk test
 
