--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -22,6 +22,8 @@ jobs:
         docker pull ialarmedalien/kb-sdk
         docker run ialarmedalien/kb-sdk genscript > ./bin/kb-sdk
         chmod 755 ./bin/kb-sdk
+        # copy ${{secrets.KBASE_TEST_TOKEN }} into a file
+        cat ${{secrets.KBASE_TEST_TOKEN }} > /kb/module/work/token
         ./bin/kb-sdk test
 
   build_test_local:
